--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
   </ul>
     </div><!--nav-->
    <div class="profile"><img src="images/island.jpg" alt="" width="100%"></div><!--profile-->
-  <div class="slideOne" >Malo e lelei and greetings to yous all. My name is Katarina Taufa but my close friends & family call me Lina, and this is my website. This website contains information about myself and who I am. In my website I categorised my website into four sections. My homepage, Hobbies, My culture and lastly my contact page. I hope you enjoy and & maybe learn abit more from me.</div><!--slideOne-->
-  <div class="slideTwo" >slideTwo</div><!--slideTwo-->
+  <div class="slideOne" >Malo e lelei and greetings to yous all. My name is Katarina Taufa but my close friends & family call me Lina, and this is my website. This website contains information about myself and who I am. In my website I categorised my website into four sections. My homepage, Hobbies, My culture and lastly my contact page. I hope you enjoy and & maybe learn abit more about me.</div><!--slideOne-->
+  <div class="slideTwo" >My part time job is a hustler. I am a money hustler. I always ask for $2 because I always have no food.  </div><!--slideTwo-->
   <div class="footer" >copyright Katarina Taufa 2021</div><!--footer-->
 
 <div><!--container-->
