changed website again

--- a/contactme.html
+++ b/contactme.html
@@ -22,7 +22,7 @@
     <div class="slideTwo">
       <ul> 
       <li> Gmail: treenahtreenah@gmail.com | inactive </li>
-      <li> Instagram: @linataufa_ |dont bother contacting my ig, cause i dont care what you say ✨Respectfully✨ </li>
+      <li> Instagram: @linataufa_  </li>
       <li> School: katalina_tau@student.asdah.school.nz |dont contact this cause i never check my emails </li>
     </div>
     <div class="footer">copyright Katarina Taufa 2021</div>
