fonts, added more content

--- a/contactme.html
+++ b/contactme.html
@@ -16,14 +16,12 @@
     <li> <a href="contactme.html">Contact Me</a></li>
   </ul>
     </div><!--nav-->
-    <div class="header">This is my contact me page. This is where you can contact my social medias & give me feedback. I will be leaving all my active social medias down below. But lastly I hope you enjoyed your time learning more about me. 
-      #UPTHEROONIES </div>
     <div class="imageOne"><img src="images/contact.jpg" alt="" width="100%"></div>
     <div class="slideTwo">
       <ul> 
-      <li> Gmail: treenahtreenah@gmail.com | inactive </li>
+      <li> Gmail: treenahtreenah@gmail.com </li>
       <li> Instagram: @linataufa_  </li>
-      <li> School: katalina_tau@student.asdah.school.nz |dont contact this cause i never check my emails </li>
+      <li> School: katalina_tau@student.asdah.school.nz</li>
     </div>
     <div class="footer">copyright Katarina Taufa 2021</div>
   
