--- a/index.html
+++ b/index.html
@@ -17,9 +17,24 @@
      <li><a href="contactme.html">Contact Me</a></li>
   </ul>
     </div><!--nav-->
-   <div class="profile"><img src="images/island.jpg" alt="" width="100%"></div><!--profile-->
-  <div class="slideOne" >Malo e lelei and greetings to yous all. My name is Katarina Taufa but my close friends & family call me Lina, and this is my website. This website contains information about myself and who I am. In my website I categorised my website into four sections. My homepage, Hobbies, My culture and lastly my contact page. I hope you enjoy and & maybe learn abit more about me.</div><!--slideOne-->
-  <div class="slideTwo" >My part time job is a hustler. I am a money hustler. I always ask for $2 because I always have no food.  </div><!--slideTwo-->
+   <div class="profile"><img src="images/island.jpg" width="100%"></div><!--profile-->
+  <div class="slideOne" ><p>Malo e lelei and greetings to yous all. My name is Katarina Taufa but my close friends & family call me Lina, and this is my website. This website contains information about myself and who I am. In my website I categorised my website into four sections. My homepage, Hobbies, My culture and lastly my contact page. I hope you enjoy and & maybe learn abit more about me.</p>
+<p>I'll live for the highest Name,
+I'll live for what matters most. Let the glory of who You are burn in my soul.
+I'll carry the highest Name. I'll treasure what matters most. Let the glory of who You are burn in my soul and I turn, I turn to Christ alone.
+I surrender all, I surrender and I live, I live for You alone. All my heart and soul,
+I surrender and whatever may come my way. Whatever tomorrow holds let the glory of who You are. Stay in my soul, stay in my soul and I turn, I turn to Christ alone.
+I surrender all, I surrender and I live, I live for You alone.
+All my heart and soul, I surrender. I turn to Christ, I give my heart, I give my life, I turn to Christ, I'm living for something so much greater and I turn, I turn to Christ alone. I surrender all, I surrender and I live, I live for You alone.
+All my heart and soul. I surrender and I turn, I turn to Christ alone.
+I surrender all, I surrender and I live, I live for You alone.
+All my heart and soul. I surrender. Turn to Christ. I give my heart, I give my life,
+I turn to Christ. I'm living for something so much greater. I turn to Christ,
+I give my heart, I give my life, I turn to Christ. I'm living for something so much greater. My heart and soul I surrender whatever may come my way and whatever tomorrow holds. Let the glory of who You are stay in my soul, Oh I turn, we turn
+to Christ</p>
+<p> Psalms 23:1-6 "The LORD is my shepherd, I lack nothing. He makes me lie down in green pastures, he leads me beside quiet waters,he refreshes my soul. He guides me along the right paths for his name’s sake. Even though I walk through the darkest valley,I will fear no evil, for you are with me; your rod and your staff, they comfort me. You prepare a table before me in the presence of my enemies. You anoint my head with oil; my cup overflows. Surely your goodness and love will follow me all the days of my life, and I will dwell in the house of the LORD forever."</p>
+</div><!--slideOne-->
+  <div class="slideTwo" >Important information about myself is my side job. My part time job is a hustler, a money hustler. I always ask for $2 because I always have no food. Not only is it just me in this job but also my other hustler. We have a company called "Got $2's" and our slogan is "We'll pay you back". We are very famous for the job we do in school. Sometimes people get annoyed of us asking for money, but we don't care because we always have no food and we get hungry very fast. So if we catch you with food or by the canteen, keep in mind we will be asking for your money. I hope whoever is reading this gives me $2 for lunch, peace :)</div><!--slideTwo-->
   <div class="footer" >copyright Katarina Taufa 2021</div><!--footer-->
 
 <div><!--container-->
